--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,44 @@
 	</div>
 <!-- header end -->
 
+<!-- menu start -->
+	<div class="mainmenu">
+		<div class="container">
+			<ul class="nav">
+				<li><a href="">О компании</a>
+					<ul class="submenu">
+						<li><a href="">Информация</a></li>
+						<li><a href="">Партнеры</a></li>
+						<li><a href="">Сферы деятельности</a></li>
+						<li><a href="">Благодарности</a></li>
+					</ul>
+				</li>
+				<li><a href="">Транспорт</a>
+					<ul class="submenu">
+						<li><a href="">Автотранспорт</a></li>
+						<li><a href="">Спецтехника</a></li>
+					</ul>
+				</li>
+				<li><a href="">Документы</a>
+					<ul class="submenu">
+						<li><a href="">Отчет по НДС</a></li>
+						<li><a href="">Учредительные документы</a></li>
+						<li><a href="">Типовая форма для клиента</a></li>
+						<li><a href="">Типовая форма для перевозчика</a></li>
+					</ul>
+				</li>
+				<li><a href="">Расчеты</a>
+					<ul class="submenu">
+						<li><a href="">Калькулятор</a></li>
+						<li><a href="">Основные направления</a></li>
+					</ul>
+				</li>
+				<li><a href="">Контакты</a></li>
+			</ul>
+		</div>
+	</div>
+<!-- menu end -->
+
 	<script src="js/scripts.min.js"></script>
 
 </body>
