--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,10 @@
 			<div class="row">
 				<div class="col-md-6">
 					<a href="/"><img src="img/ic-ph/logo.png" alt="грузоперевозки и логистические услуги"></a>
-					<h1>Премиум-Транс-Плюс</h1>
-					<h4>Скорость. Надежность. Профессионализм.</h4>
+					<div class="zag">
+						<h1>Премиум-Транс-Плюс</h1>
+						<h4>Скорость. Надежность. Профессионализм.</h4>
+					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="phone">
@@ -87,6 +89,48 @@
 	</div>
 <!-- menu end -->
 
+<!-- slideforma start -->
+	<div class="slideforma">
+		<div class="container">
+			<div class="row">
+				<div class="formaout">
+					<div class="formin">
+						<form action="send.php">
+							<h2>РАСЧЕТ ГРУЗОПЕРЕВОЗКИ</h2>
+							<div class="lab">откуда</div><input type="text" name="from"><br>
+							<div class="free"></div>
+							<div class="lab">куда</div><input type="text" name="to">
+							<p>параметры транспорта</p>
+							<input type="radio" name="param" value="no" checked> Нет<br>
+							<input type="radio" name="param" value="bok" checked> Боковая погрузка/выгрузка<br>
+							<input type="radio" name="param" value="izoterm" checked> Изотермический фургон<br>
+							<input type="radio" name="param" value="poln" checked> Полная растентовка<br>
+							<input type="radio" name="param" value="refr" checked> Рефрижиратор<br>
+							<input class="phonein" type="text" name="phone" placeholder="ваш телефон"><br>
+							<button type="submit" class="but">ОТПРАВИТЬ</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- slideforma end -->
+
+<!-- about start-->
+	<div class="about">
+		<div class="container">
+			<div class="row">
+				<h2>О нас</h2>
+				<p>Далеко-далеко за словесными горами в стране.</p>
+			</div>
+			<div class="row">
+				<div class="col-md-4"><img src="img/ic-ph/it1.jpg" alt=""></div>
+				<div class="col-md-4"><img src="img/ic-ph/it2.jpg" alt=""></div>
+				<div class="col-md-4"><img src="img/ic-ph/it3.jpg" alt=""></div>
+			</div>
+		</div>
+	</div>
+<!-- about end-->
 	<script src="js/scripts.min.js"></script>
 
 </body>
