--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 <body>
 
-<!-- header start -->
+	<!-- header start -->
 	<div class="header">
 		<div class="container">
 			<div class="row">
@@ -49,9 +49,9 @@
 			</div>
 		</div>
 	</div>
-<!-- header end -->
+	<!-- header end -->
 
-<!-- menu start -->
+	<!-- menu start -->
 	<div class="mainmenu">
 		<div class="container">
 			<ul class="nav">
@@ -87,9 +87,9 @@
 			</ul>
 		</div>
 	</div>
-<!-- menu end -->
+	<!-- menu end -->
 
-<!-- slideforma start -->
+	<!-- slideforma start -->
 	<div class="slideforma">
 		<div class="container">
 			<div class="row">
@@ -114,23 +114,45 @@
 			</div>
 		</div>
 	</div>
-<!-- slideforma end -->
+	<!-- slideforma end -->
 
-<!-- about start-->
-	<div class="about">
-		<div class="container">
-			<div class="row">
-				<h2>О нас</h2>
-				<p>Далеко-далеко за словесными горами в стране.</p>
-			</div>
-			<div class="row">
-				<div class="col-md-4"><img src="img/ic-ph/it1.jpg" alt=""></div>
-				<div class="col-md-4"><img src="img/ic-ph/it2.jpg" alt=""></div>
-				<div class="col-md-4"><img src="img/ic-ph/it3.jpg" alt=""></div>
+	<!-- about start-->
+		<div class="about">
+			<div class="container">
+				<div class="row">
+					<h2>О нас</h2>
+					<p>Транспортная компания Премиум Транс Плюс оказывает транспортно-логистические услуги. Нами накоплен колоссальный опыт, который позволяет нам решать самые сложные задачи в области транспортной логистики. В нашем распоряжении достаточное количество различных машин, которые предназначены для любых целей. У нас несколько маршрутов движения – по Москве, по Калужской области, в Санкт-Петербург, из Санкт-Петербург,   по России, международные (в Беларусь, Казахстан).</p>
+				</div>
+				<div class="row">
+					<div class="col-md-4"><img src="img/ic-ph/it1.jpg" alt=""></div>
+					<div class="col-md-4"><img src="img/ic-ph/it2.jpg" alt=""></div>
+					<div class="col-md-4"><img src="img/ic-ph/it3.jpg" alt=""></div>
+				</div>
 			</div>
 		</div>
-	</div>
-<!-- about end-->
+	<!-- about end-->
+
+	<!-- grus start -->
+		<div class="gruz">
+			<div class="container">
+				<h2>Любой груз</h2>
+				<div class="row">
+					<div class="col-md-4">
+						<img src="" alt="">
+						<p></p>
+					</div>
+					<div class="col-md-4">
+						<img src="" alt="">
+						<p></p>
+					</div>
+					<div class="col-md-4">
+						<img src="" alt="">
+						<p></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	<!-- grus end -->
 	<script src="js/scripts.min.js"></script>
 
 </body>
